<resources>
    <string name="app_name">ICCC2016</string>
    <string name="title_activity_hotel_and_travel">Hotel/Travel</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_hotel_title1">Hotel Information</string>
    <string name="fragment_hotel_title2">About the Hotel</string>
    <string name="fragment_hotel_title3">GROUND TRANSPORTATION</string>
    <string name="title_activity_program">Programs</string>
    <string name="icon_font_welcome">&#xe6c8;</string>
    <string name="icon_font_program">&#xe614;</string>
    <string name="icon_font_map">&#xe626;</string>
    <string name="icon_font_patrons">&#xe6ea;</string>
    <string name="icon_font_commitee">&#xe6bd;</string>
    <string name="icon_font_hotel_and_travel">&#xe71f;</string>
    <string name="icon_font_message">&#xe645;</string>
    <string name="icon_font_version_update">&#xe60f;</string>
    <string name="title_activity_general_chairs">General Chairs</string>
    <string name="title_activity_committee">ICCC Committees</string>
    <string name="title_activity_version">Update</string>
    <string name="general_chairs_content">\tOn behalf of the Executive Committee and the hosting University of Electronic Science and Technology of China,
        it is our great pleasure to welcome you to the fifth IEEE/CIC International Conference on Communications in China (ICCC 2016) in the magnificent
        city of Chengdu, China, 27-29 July, 2016.\n\n
        Since its commencement in 2012, the ICCC conference has grown steadily from a brand new conference with
        a strong vision, to a unique venue in bringing together global researchers and practitioners in areas of communications to the greater China region.
        In particular, this year’s ICCC aims at addressing a key theme on “Ubiquitous Communications &amp; Computing for Future Internet”,
        which broadly cover all disciplines of communications from fundamental research to emerging applications, while emphasizing society-shaping
        technologies in the modern IT era.\n\n
        In addition to providing a major forum for people to present their frontier research work and discuss the
        latest breakthroughs, the ICCC 2016 also features Keynotes, Plenary Speeches, Invited Talks, Tutorials, Industrial &amp; Academic Panels,
        Exhibitions, and dedicated Workshops. For those who attend the ICCC for the first time, you will soon appreciate the fact that ICCC is more
        than just an outstanding technical conference, it is also a friendly rendezvous to interact, inspire, and discover.\n\n
        This year we are honored to have four world renowned scholars to be our keynote speakers. Not only have each of them made extraordinary
        contributions to the fields of communications, their diverse expertise and keen visions in both academia and industry are equally remarkable.
        We look forward to their stimulating and scholastic seminars.\n\n
        Finally, we wish all the participants a very fruitful and productive conference, and also an unforgettable stay in Chengdu.</string>
    <string name="general_chairs_end">General Chairs, IEEE/CIC ICCC 2016</string>
    <string name="update_info">Already up-to-date</string>
    <string name="title_activity_technical_program_chairs">Technical Program Chairs</string>
    <string name="technical_program_chairs_content">On behalf of the Technical Program Committee, it is our great pleasure to welcome you to the
        fifth IEEE/CIC International Conference on Communications in China (ICCC 2016), in the magnificent city of Chengdu. Under the theme of
        “Ubiquitous Communications &amp; Computing for Future Internet”, IEEE/CIC ICCC 2016 brings together researchers to discuss the latest
        advances in communications. The technical program of ICCC 2016 features 4 world-class keynote speeches, 9 technical symposia, 9 tutorials,
        1 industrial and academic panel, and 4 workshops. In addition, we have 15 symposium invited talks delivered by famous experts from
        academia and industry.\n\n

        In this fifth edition of IEEE ComSoc’s flagship conference in China, we have maintained the high quality of the conference.
        We received 313 paper submissions from about 30 countries and regions. Out of these, 151 papers were accepted,
        corresponding to an acceptance rate of 48.24%. All papers were carefully peer reviewed by more than 400 TPC members and reviewers,
        with each paper evaluated by at least three reviewers. Within these accepted papers, we also have 7 invited papers by established experts
        in their fields. All these papers and talks are organized into 25 lecture-style oral sessions and 2 interactive poster sessions.\n\n

         We are confident that you will find the technical program of IEEE/CIC ICCC 2016 very stimulating and inspiring. We warmly invite all of you
        to join us in interacting with the keynote/plenary and invited speakers, and industrial panelists, and more importantly, interacting with all
        of your peer attendees. A technical program like this would not have been possible without the hard work and devotion of many of our organizing
        committee members and volunteers. We would like to especially thank the Symposium Chairs, Workshop Chairs, Tutorial Chairs, and Industrial and
        Academic Panel Chairs for their exceptional work. We would also like to express our sincere thanks to all the TPC members and reviewers for their
        help in the paper review process.\n\n

        Finally, we wish to thank all authors and attendees for participating in the conference. We hope you will have a fruitful and memorable experience
        at IEEE/CIC ICCC 2016 in Chengdu.\n\n
        </string>
    <string name="technical_program_chairs_end">Technical Program Chairs, IEEE/CIC ICCC 2016</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_member">TPC Members</string>
    <string name="title_activity_technical_program_committee">TPC
    </string>
    <string name="title_activity_committee_main">Committee</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_way_to_hotel">Way To Hotel</string>
    <string name="way_from_airport_title">FROM Chengdu Shuangliu International Airport</string>
    <string name="way_from_airport_content">Taxi: It takes about 29 minutes from Shuangliu International Airport to Wang Jiang Hotel by taxi, costing about 45RMB.\n
                                            Public Transport: You can also take Airport Bus Line 2 from Shuangliu International Airport stop to Tianfu Square stop.
                                            Then take metro line 2 to Dongda Road stop and walk around 800m to the hotel.
    </string>
    <string name="way_from_east_railway_title">FROM Chengdu East Railway Station</string>
    <string name="way_from_east_railway_content">Taxi: It takes about 13 minutes from Chengdu East Railway Station to Wang Jiang Hotel by taxi, costing about 15RMB.\n
                                                Public Transport: You can also take metro line 2 from Chengdu East Railway Station to Dongda Road stop and walk
                                                around 800m to the hotel.
    </string>
    <string name="way_from_railway_title">FROM Chengdu Railway Station</string>
    <string name="way_from_railway_content">Taxi: It takes about 21 minutes from Chengdu Railway Station to Wang Jiang Hotel by taxi, costing about 24RMB.\n
                                            Public Transport: You can also take metro line 1 from Chengdu Railway Station to Tianfu Square stop,
                                            then change to the metro line 2 to Dongda Road stop and walk around 800m to the hotel.
    </string>
    <string name="title_activity_map_of_hotel">Map Of Hotel</string>
    <string name="title_activity_hotels_around">Hotels Around</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="title_activity_committee_details">CommitteeDetailsActivity</string>

=======
>>>>>>> b0004de39cbaf6c06bcfe93e9f775d7d6fdfa085
=======
>>>>>>> b0004de39cbaf6c06bcfe93e9f775d7d6fdfa085

    <!--Committee Name-->
    <string name="committee_shaoqian_li">Shaoqian Li</string>
    <string name="committee_xingsheng_zhang">Xingsheng Zhang</string>
    <string name="committee_wei_zhang">Wei Zhang</string>
    <string name="committee_meixia_tao">Meixia Tao</string>
    <string name="committee_hongfang_yu">Hongfang Yu</string>
    <string name="committee_kun_yang">Kun Yang</string>
    <string name="committee_shui_yu">Shui Yu</string>
    <string name="committee_kun_wang">Kun Wang</string>
    <string name="committee_bin_ma">Bin Ma</string>
    <string name="committee_bruce">Bruce Worthman</string>
    <string name="committee_bo_yan">Bo Yan</string>
    <string name="committee_xiaoyan_huang">Xiaoyan Huang</string>
    <string name="committee_rongping_lin">Rongping Lin</string>
    <string name="committee_jingran_lin">Jingran Lin</string>
    <string name="committee_yue_cao">Yue Cao</string>
    <string name="committee_geyong_min">Geyong Min</string>
    <string name="committee_sumei_sun">Sumei Sun</string>
    <string name="committee_xuming_fang">Xuming Fang</string>
    <string name="committee_gang_wu">Gang Wu</string>
    <string name="committee_pingyi_fan">Pingyi Fan</string>
    <string name="committee_guodong_zhao">Guodong Zhao</string>
    <string name="committee_fan_wu">Fan Wu</string>
    <string name="committee_yunkai_wei">Yunkai Wei</string>
    <string name="committee_xuemin_shen">Xuemin(Sherman)Shen</string>
    <string name="committee_ke_gong">Ke Gong</string>
    <string name="committee_zhen_yang">Zhen Yang</string>
    <string name="committee_khaled">Khaled B. Letaief</string>
    <string name="committee_kwang">Kwang-Cheng Chen</string>
    <string name="committee_steve">Steve Weinstein</string>
    <string name="committee_tong_song">Tong Song</string>
    <string name="committee_yinghai_zhang">Yinghai Zhang</string>
    <string name="committee_zhisheng_niu">Zhisheng Niu</string>

</resources>
