<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.wqt.iccc2016.qpf.WayToHotelActivity"
    tools:showIn="@layout/activity_way_to_hotel">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_way_from_airport_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_airport_title"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_way_from_airport_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_airport_content"
                android:textSize="12sp" />
            <ImageView
                android:id="@+id/iv_way_from_airport"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/way_from_airport"/>
            <TextView
                android:id="@+id/tv_way_from_east_railway_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_east_railway_title"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_way_from_east_railway_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_east_railway_content"
                android:textSize="12sp" />
            <ImageView
                android:id="@+id/iv_way_from_east_railway"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/way_from_east_railway"/>
            <TextView
                android:id="@+id/tv_way_from_railway_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_railway_title"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_way_from_railway_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="6dp"
                android:text="@string/way_from_railway_content"
                android:textSize="12sp" />
            <ImageView
                android:id="@+id/iv_way_from_railway"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/way_from_railway"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
